--- a/book-author-query-graphql/package.json
+++ b/book-author-query-graphql/package.json
@@ -4,6 +4,7 @@
   "description": "book and author graphql query app",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Esa Salminen",
