--- a/book-author-query-graphql/package.json
+++ b/book-author-query-graphql/package.json
@@ -4,7 +4,7 @@
   "description": "book and author graphql query app",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Esa Salminen",
@@ -12,6 +12,8 @@
   "dependencies": {
     "apollo-server": "^3.5.0",
     "graphql": "^16.0.1",
+    "mongoose": "^6.0.13",
+    "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
   }
 }
