--- a/book-author-query-graphql/package.json
+++ b/book-author-query-graphql/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^3.5.0",
     "graphql": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
